hospital form | radio btn, select dropdown and other section added

--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -11,18 +11,20 @@
     <div class="mk-form__form">
       <form [formGroup]="needppeForm">
         <div class="form-group formStyle p-5 mb-5 firstCard">
-          <label for="InputName">Full Name</label>
+          <label class="mk-required" for="InputName">Full Name</label>
           <input ncovAlphaNumeric id="InputName" type="text" class="form-control mt-5 no-border" aria-describedby="Yourname"
             placeholder="Your name" formControlName="name">
           <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+          <small class="text-danger" *ngIf="needppeForm.controls.name.touched && needppeForm.controls.name.errors?.required">This is a required field</small>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="inputNumber">Phone number</label>
+          <label class="mk-required" for="inputNumber">Phone number</label>
           <input ncovNumeric id="inputNumber" type="text" class="form-control mt-5 mr-3 no-border" placeholder="Your Number"
             formControlName="mobile">
+            <small class="text-danger" *ngIf="needppeForm.controls.mobile.touched && needppeForm.controls.mobile.errors?.required">This is a required field</small>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="areYouDoctor">Are you a doctor?</label>
+          <label class="mk-required" for="areYouDoctor">Are you a doctor?</label>
           <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 mt-5"
             (click)="toggleDoctor(true)">Yes</button>
           <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 ml-3 mt-5"
@@ -30,7 +32,7 @@
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5"
           [ngClass]="{'disabled': !isDoctor}">
-          <label for="mciNumber">MCI Number</label>
+          <label class="mk-required" for="mciNumber">MCI Number</label>
           <small class="form-text text-muted">MCI number to be used for verification purposes only. Please ensure that
             your name and MCI number match the official MCI database.</small>
           <div class="row">
@@ -41,45 +43,48 @@
             </div>
           </div>
           <button type="button" class="mk-btn-sm mk-btn-primary px-3 px-md-4 mt-4"
-            (click)="verifyMCI()" [disabled]="spinnerFlag" >{{ spinnerFlag ? 'Verifying' : 'Verify'}}</button>
-          <button type="button" class="mk-btn-md mk-btn-primary px-3 px-md-4 ml-3 mt-4"  (click)="toggleDoctor(false)" >Don't Have</button>
+            (click)="verifyMCI()" [disabled]="spinnerFlag || !isDoctor" >{{ spinnerFlag ? 'Verifying' : 'Verify'}}</button>
+          <button type="button" class="mk-btn-md mk-btn-primary px-3 px-md-4 ml-3 mt-4"  (click)="toggleDoctor(false)" [disabled]="!isDoctor" >Don't Have</button>
         </div>
         <!-- Email Address Begins-->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="email">{{ isDoctor ? 'Email Address' : 'Corporate Email Address' }}</label>
+          <label class="mk-required" for="email">{{ isDoctor ? 'Email Address' : 'Corporate Email Address' }}</label>
           <small *ngIf="!isDoctor" class="form-text text-muted">Please enter your corporate email address. Email
             Addresses from popular
             email providers shall not be accepted. If you do not have a corporate email address, please input your MCI
             number in the field above.</small>
-          <input type="email" id="email" class="form-control mt-5 no-border" placeholder="Your Email" formControlName="email">
+          <input type="text" id="email" class="form-control mt-5 no-border" placeholder="Your Email" formControlName="email">
+          <small class="text-danger" *ngIf="needppeForm.controls.email.touched && needppeForm.controls.email.errors?.required">This is a required field</small>
         </div>
         <!-- Email Address Ends -->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="hospitalAddress">Hospital Address</label>
+          <label class="mk-required" for="hospitalAddress">Hospital Address</label>
           <input type="address" id="hospitalAddress" class="form-control mt-5 no-border" placeholder="Hospital Address"
             formControlName="hospitalAddress">
+            <small class="text-danger" *ngIf="needppeForm.controls.hospitalAddress.touched && needppeForm.controls.hospitalAddress.errors?.required">This is a required field</small>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="state">State</label>
+          <label class="mk-required" for="state">State</label>
           <select class="mk-select" formControlName="state" id="state" >
             <option class="mk-select-option" *ngFor="let state of states" [value]="state">{{state}}</option>
           </select>
         </div>
         <div class="form-group formStyle  p-5 mt-md-5 mb-5">
-          <label for="pincode">Pincode</label>
+          <label class="mk-required" for="pincode">Pincode</label>
           <input ncovNumeric id="pincode" type="pincode" class="form-control mt-5 no-border" placeholder="Pincode"
             formControlName="pincode">
+            <small class="text-danger" *ngIf="needppeForm.controls.pincode.touched && needppeForm.controls.pincode.errors?.required">This is a required field</small>
         </div>
         <!-- home made -->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="homemade PPE">Are You Willing to Accept HomeMade PPE</label>
+          <label class="mk-required" for="homemade PPE">Are You Willing to Accept HomeMade PPE</label>
           <div class="px-3 px-md-4 mt-5">
-            <label for="homeMade_true" class="mk-radio-yes mk-radio-container" >
+            <label class="mk-required" for="homeMade_true" class="mk-radio-yes mk-radio-container" >
               <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
               <i class="radiomark"></i>
               Yes
             </label>
-            <label for="homeMade_false" class="mk-radio-no mk-radio-container">
+            <label class="mk-required" for="homeMade_false" class="mk-radio-no mk-radio-container">
               <input type="radio" id="homeMade_false" value="false" formControlName="homeMade">
               <i class="radiomark"></i>
               No
@@ -87,32 +92,57 @@
           </div>
         </div>
         <!-- home made ends -->
-
         <div formGroupName="materialsRequired">
           <div class="form-group formStyle p-5 mt-md-5 mb-5">
-            <label for="PPE">What Do You Need</label>
-            <div *ngFor="let ppe of needppeForm.controls.materialsRequired.controls; let i = index " [formGroupName]="i"
-              class="row">
-              <div class="form-check col-lg-8 col-md-6 mt-2 mb-2 checkbox">
-                <label class="mk-checkbox-container" for="defaultCheck{{i}}">
-                  <input class="" id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe">
-                  <i class="checkmark"></i>
-                  {{ppeList[i].ppe}}
-                </label>
+            <label class="mk-required" for="PPE">What Do You Need</label>
+            <div *ngFor="let ppe of needppeForm.controls.materialsRequired['controls']; let i = index " [formGroupName]="i">
+              <div class="row" *ngIf="ppeList[i].ppe !== 'Others'">
+                <div class="form-check col-lg-8 col-md-6 mt-2 mb-2 checkbox">
+                  <label class="mk-checkbox-container pt-3" for="defaultCheck{{i}}">
+                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe" (change)="onTogglePpe(i)" >
+                    <i class="checkmark mt-3"></i>
+                    {{ppeList[i].ppe}}
+                  </label>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
+                  <label>
+                    <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required" >
+                  </label>
+                </div>
               </div>
-              <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
-                <label>
+              <div class="row" *ngIf="ppeList[i].ppe === 'Others'">
+                <div class="form-check col-lg-4 col-md-6 mt-2 mb-2 checkbox">
+                  <label class="mk-checkbox-container pt-3" for="defaultCheck{{i}}">
+                    <input id="defaultCheck{{i}}" type="checkbox" [formControlName]="ppeList[i].ppe" (change)="onTogglePpe(i)">
+                    <i class="checkmark mt-3"></i>
+                    {{ppeList[i].ppe}}
+                  </label>
+                </div>
+                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
+                  <input ncovAlphaNumeric type="text" class="form-control no-border w-100" placeholder="Other PPE Item" [formControlName]="ppeList[i].otherPpe" (change)="onTogglePpe(i)" >
+                </div>
+                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required">
-                </label>
+                </div>
               </div>
             </div>
+            <small *ngIf="!ppeItemSelected" class="text-danger d-block">Please select atleast one PPE item</small>
             <button type="button" (click)="toggleAdd($event.target)" class="mk-btn-sm mk-btn-primary px-3 px-md-4 mt-5">Add</button>
           </div>
         </div>
-
-        <div class="">
+        <div class="form-submit">
+          <div class="terms-condition">
+            <label class="mk-checkbox-container pt-3" for="termsCondition">
+              <input id="termsCondition" type="checkbox" formControlName="tnc" >
+              <i class="checkmark mt-3"></i>
+              Terms and Conditions
+            </label>
+          </div>
+          <div class="email-copy-text">
+            <small>A copy of your responses will be emailed to the address you provided.</small>
+          </div>
           <button type="submit" class="mk-btn-primary px-3 px-md-4 mt-5"
-            (click)="onSubmit()">Submit</button>
+            (click)="onSubmit()" [disabled]="!needppeForm.valid || !needppeForm.controls.tnc.value" >Submit</button>
         </div>
       </form>
     </div>
