--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -34,6 +34,11 @@
     background-color: $btn-secondary;
   }
 
+  &[disabled] {
+    background-color: gray;
+    pointer-events: none;
+  }
+
   @include media-breakpoint-down(md) {
     font-size: 0.875 * $spacer;
   }
