--- a/src/app/homepage/homepage-build-section/homepage-build-section.component.html
+++ b/src/app/homepage/homepage-build-section/homepage-build-section.component.html
@@ -6,7 +6,7 @@
         <h1 class="buildComingSoon">COMING SOON</h1>
       </div>
     </div>
-<div class="row justify-content-center text-center mb-5">
+<div class="row justify-content-center text-center mb-5 mx-0">
   <div class="col-4">
     <img src="../../../assets/images/homepage-build-section/3dprint.svg" alt='3D printing' class="w-50 img-fluid">
     <h5 class="mt-5">3D Printing N95 Masks</h5>
