--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -31,12 +31,13 @@
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5"
           [ngClass]="{'disabled': !isDoctor}">
-          <label class="mk-required" for="mciNumber">MCI Number</label>
+          <label [ngClass]="{'mk-required': isDoctor}" for="mciNumber">MCI Number</label>
           <small class="form-text text-muted">MCI number to be used for verification purposes only. Please ensure that
             your name and MCI number match the official MCI database.</small>
           <div class="row">
             <input ncovAlphaNumeric id="mciNumber" type="text" class="form-control mt-5 no-border" placeholder="MCI Number"
               formControlName="MCInumber">
+              <small class="text-danger" *ngIf="needppeForm.controls.MCInumber.touched && needppeForm.controls.MCInumber.errors?.required">This is a required field</small>
             <div class="spinner-border mt-md-5 ml-md-3" role="status" *ngIf=spinnerFlag>
               <span class="sr-only">Loading...</span>
             </div>
