--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -36,6 +36,20 @@
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+
+    .border-right {
+      border-right: 1px solid $btn-primary !important;
+
+      @include media-breakpoint-down(md) {
+        border-right: none !important;
+      }
+    }
+
+    @include media-breakpoint-down(md) {
+      .navbar-toggler {
+        background-color: rgba(135, 135, 236, 0.8);
+      }
+    }
 }
 
 .active .navbar-nav .nav-link{
