--- a/src/app/haveppe/haveppe.component.html
+++ b/src/app/haveppe/haveppe.component.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <input ncovAlphaNumeric type="text" class="form-control no-border w-100" placeholder="Other PPE Item" [formControlName]="ppeList[i].otherPpe" (change)="onTogglePpe(i)" >
                 </div>
-                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
+                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4 ml-md-auto">
                   <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required">
                 </div>
               </div>
@@ -55,12 +55,12 @@
             formControlName="pinCode">
             <small class="text-danger" *ngIf="this.haveppeForm.controls.pinCode.touched && this.haveppeForm.controls.pinCode.errors?.required" >
               This field is required
-            </small> 
+            </small>
           </div>
 
         <div class="form-group formStyle  p-5 mt-md-5 mb-5">
           <label for="registered" class="mk-required">Is Your Organisation Registered?</label>
-          <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes. 
+          <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes.
             Please leave the field blank if you are not registered.</small>
           <input ncovAlphaNumeric id="registered" type="registrationNo" class="form-control mt-5 no-border" placeholder="Registeration Number."
           formControlName="companyRegistrationNo">
@@ -82,7 +82,7 @@
           </div>
           <small class="text-danger" *ngIf="this.haveppeForm.controls.homeMade.touched && this.haveppeForm.controls.homeMade.errors?.required" >
             This field is required
-          </small> 
+          </small>
         </div>
 
         <div class="form-group formStyle p-5 mb-5 mt-md-5">
@@ -92,7 +92,7 @@
           <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
           <small class="text-danger" *ngIf="this.haveppeForm.controls.name.touched && this.haveppeForm.controls.name.errors?.required" >
             This field is required
-          </small> 
+          </small>
         </div>
 
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
@@ -101,7 +101,7 @@
             formControlName="phoneNo">
             <small class="text-danger" *ngIf="this.haveppeForm.controls.phoneNo.touched && this.haveppeForm.controls.phoneNo.errors?.required" >
               This field is required
-            </small> 
+            </small>
           </div>
 
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
@@ -110,10 +110,10 @@
             formControlName="email">
             <small class="text-danger" *ngIf="this.haveppeForm.controls.email.touched && this.haveppeForm.controls.email.errors?.required" >
               This field is required
-            </small> 
+            </small>
             <small class="text-danger" *ngIf="this.haveppeForm.controls.email.touched && this.haveppeForm.controls.email.errors?.email" >
               Please input a valid Email address.
-            </small> 
+            </small>
           </div>
           <div class="form-submit">
             <div class="terms-condition">
