--- a/src/app/homepage/homepage-build-section/homepage-build-section.component.html
+++ b/src/app/homepage/homepage-build-section/homepage-build-section.component.html
@@ -1,6 +1,6 @@
 <div class='homepage-build-section'>
   <div class="container">
-    <div class="row">
+    <div class="row mx-0">
       <div class="col-12 text-center header mt-5 mb-4 buildSectionHeader">Build PPE</div>
       <div class="col-12 text-center header mb-5">
         <h1 class="buildComingSoon">COMING SOON</h1>
@@ -9,15 +9,15 @@
 <div class="row justify-content-center text-center mb-5 mx-0">
   <div class="col-4">
     <img src="../../../assets/images/homepage-build-section/3dprint.svg" alt='3D printing' class="w-50 img-fluid">
-    <h5 class="mt-5">3D Printing N95 Masks</h5>
+    <h5 class="homepage-build-section__item-name mt-5">3D Printing N95 Masks</h5>
   </div>
   <div class="col-4">
     <img src="../../../assets/images/homepage-build-section/manufature.svg" alt='manufacture' class="w-50 img-fluid">
-    <h5 class="mt-5">CNC Manufacturing</h5>
+    <h5 class="homepage-build-section__item-name mt-5">CNC Manufacturing</h5>
   </div>
   <div class="col-4">
     <img src="../../../assets/images/homepage-build-section/sewing-machine.svg" alt='sewing-machine' class="w-50 img-fluid">
-    <h5 class="mt-5">Sewing Surgical Masks</h5>
+    <h5 class="homepage-build-section__item-name mt-5">Sewing Surgical Masks</h5>
   </div>
 </div>
   </div>
