initial UI fixes

--- a/src/app/haveppe/haveppe.component.scss
+++ b/src/app/haveppe/haveppe.component.scss
@@ -27,6 +27,13 @@
 //     background-color: grey;
 //   }
   
+    .mk-terms{
+        color: $btn-primary;
+    
+        &:hover{
+        color: $btn-secondary;
+        }
+    }
   
 
   select.mk-select {
