--- a/src/app/haveppe/haveppe.component.html
+++ b/src/app/haveppe/haveppe.component.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <label>
-                    <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required" >
+                    <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].required" >
                   </label>
                 </div>
               </div>
@@ -40,7 +40,7 @@
                   <input ncovAlphaNumeric type="text" class="form-control no-border w-100" placeholder="Other PPE Item" [formControlName]="ppeList[i].otherPpe" (change)="onTogglePpe(i)" >
                 </div>
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
-                  <input ncovNumeric type="text" class="form-control" placeholder="Amount" [formControlName]="ppeList[i].required">
+                  <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].required">
                 </div>
               </div>
             </div>
@@ -59,7 +59,7 @@
           </div>
 
         <div class="form-group formStyle  p-5 mt-md-5 mb-5">
-          <label for="registered" class="mk-required">Is Your Organisation Registered?</label>
+          <label for="registered">Is Your Organisation Registered?</label>
           <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes. 
             Please leave the field blank if you are not registered.</small>
           <input ncovAlphaNumeric id="registered" type="registrationNo" class="form-control mt-5 no-border" placeholder="Registeration Number."
@@ -67,7 +67,7 @@
         </div>
 
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="homemade PPE" class="mk-required">Is Your PPE HomeMade?</label>
+          <label for="homemade PPE" class="mk-required">Is Your PPE Certified (ISO, ICMR, ICMED) ?</label>
           <div class="px-3 px-md-4 mt-5">
             <label for="homeMade_true" class="mk-radio-yes mk-radio-container" >
               <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
@@ -120,10 +120,17 @@
               <label class="mk-checkbox-container pt-3" for="termsCondition">
                 <input id="termsCondition" type="checkbox" formControlName="tnc" >
                 <i class="checkmark mt-3"></i>
-                Terms and Conditions
+                I have read and accepted the <span [routerLink]="'/build'" class="mk-terms">Terms and Conditions</span>
               </label>
             </div>
-            <div class="email-copy-text">
+            <div class="email-copy-text mt-3">
+              <small class="font-weight-bold">
+                Medkonnect does not take any responsibility for the sale and transportation of any medical equipment or device. 
+                All cost and liabilities related to the transportation,
+                including but not limited to vehicle operations and loading of the products shall be borne by the supplier.
+              </small>
+            </div>
+            <div class="email-copy-text mt-3">
               <small>A copy of your responses will be emailed to the address you provided.</small>
             </div>
             <button type="submit" class="mk-btn-primary px-3 px-md-4 mt-5"
