--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -18,7 +18,7 @@
 }
 
 .navbar-dark .navbar-brand{
-    color: $header-logo;
+    color: $btn-primary;
     font-size: $spacer * 1.5;
     line-height: $spacer * 1.8125;
 }
@@ -36,6 +36,10 @@
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+
+    .navbar-brand {
+      color: $btn-primary;
+    }
 
     .border-right {
       border-right: 1px solid $btn-primary !important;
