--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,17 +6,19 @@
     <div class="mt-5">
       <div class="footer__social-icons">
         <div class="d-flex justify-content-center">
-          <a class="footer__social-icon-link" href="https://www.facebook.com/MedKonnect.org/
-             ?ref=aymt_homepage_panel&eid=ARBLqUu54UeYlmO7Xt4xH4rXUTxBfn4GHC
-             -GNYNvfnn6sDE4D397zz8XZrhMX8Ojixq6KWQOtLEWJu08">
+          <a class="footer__social-icon-link" href="https://www.facebook.com/groups/250268826009392/">
             <i class="footer__social-icon mx-1 fab fa-facebook-f"></i>
           </a>
-          <i class="footer__social-icon mx-1 fab fa-twitter"></i>
-          <i class="footer__social-icon mx-1 fab fa-linkedin-in"></i>
-          <i class="footer__social-icon mx-1 fab fa-instagram-square"></i>
+          <a class="footer__social-icon-link" href="mailto:support@medkonnect.org">
+            <i class="footer__social-icon mx-1 fas fa-envelope-square"></i>
+          </a>
+          <a class="footer__social-icon-link" href="https://api.whatsapp.com/send?phone=919911224333">
+            <i class="footer__social-icon mx-1 fab fa-whatsapp"></i>
+          </a>
         </div>
       </div>
       <div class="footer__copyright mx-0 mt-2">
+        <p class="footer__copyright-text text-center mb-0">Reach us at: <a href="mailto:support@medkonnect.org">support@medkonnect.org</a></p>
         <p class="footer__copyright-text text-center mb-0">&copy; 2020 by Med Konnect</p>
       </div>
     </div>
