--- a/src/app/homepage/high-demand-ppe/high-demand-ppe.component.html
+++ b/src/app/homepage/high-demand-ppe/high-demand-ppe.component.html
@@ -8,8 +8,8 @@
             <h3 class="high-demand-ppe__tiles-title">{{ tile.title }}</h3>
             <p class="high-demand-ppe__tiles-description">{{ tile.description }}</p>
             <div class="high-demand-ppe__tiles-btn">
-              <button class="mk-btn-primary my-2" (click)="onRoute('need')">REQUEST PPE</button>
-              <button class="mk-btn-primary my-2" (click)="onRoute('need')">PROVIDE PPE</button>
+              <button class="mk-btn-primary my-2" (click)="onRoute('need')">REQUEST</button>
+              <button class="mk-btn-primary my-2" (click)="onRoute('need')">PROVIDE</button>
             </div>
             <img class="high-demand-ppe__tiles-image" src="{{ tile.path }}" alt="{{ tile.title }}" />
           </div>
